【loong】 登录修改密码加密算法报错问题